[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/tower-base-b.png" type="Texture" id=1]
[ext_resource path="res://assets/images/tower-base-b-pressed.png" type="Texture" id=2]
[ext_resource path="res://tower-base.gd" type="Script" id=3]
[ext_resource path="res://assets/images/fire-range-100.png" type="Texture" id=4]
[ext_resource path="res://assets/images/button-tower-a.png" type="Texture" id=5]
[ext_resource path="res://assets/images/button-shadow.png" type="Texture" id=6]
[ext_resource path="res://assets/images/button-tower-d.png" type="Texture" id=7]
[ext_resource path="res://assets/images/button-tower-e.png" type="Texture" id=8]
[ext_resource path="res://assets/images/button-sell.png" type="Texture" id=9]
[ext_resource path="res://assets/images/button-upgrade.png" type="Texture" id=10]

[node name="TowerBase" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="FireRange" type="Sprite" parent="." index="0"]

position = Vector2( 32, 16 )
texture = ExtResource( 4 )

[node name="BuyTowerAButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -36.0
margin_top = -8.0
margin_right = 12.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="BuyTowerAButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.854902, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0.0627451, 0, 0.75 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "$ 99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shadow" type="Sprite" parent="BuyTowerAButton" index="1"]

show_behind_parent = true
position = Vector2( 28, 28 )
texture = ExtResource( 6 )

[node name="BuyTowerDButton" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = -8.0
margin_right = 100.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="BuyTowerDButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.854902, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0.0627451, 0, 0.75 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "$ 99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shadow" type="Sprite" parent="BuyTowerDButton" index="1"]

show_behind_parent = true
position = Vector2( 28, 28 )
texture = ExtResource( 6 )

[node name="BuyTowerEButton" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = -48.0
margin_right = 56.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )

[node name="Label" type="Label" parent="BuyTowerEButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.854902, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0.0627451, 0, 0.75 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "$ 99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shadow" type="Sprite" parent="BuyTowerEButton" index="1"]

show_behind_parent = true
position = Vector2( 28, 28 )
texture = ExtResource( 6 )

[node name="SellTowerButton" type="TextureButton" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = 32.0
margin_right = 16.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="SellTowerButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.854902, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0.0627451, 0, 0.745098 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "$ 99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shadow" type="Sprite" parent="SellTowerButton" index="1"]

show_behind_parent = true
position = Vector2( 28, 28 )
texture = ExtResource( 6 )

[node name="UpgradeTowerButton" type="TextureButton" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )

[node name="Label" type="Label" parent="UpgradeTowerButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.854902, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0.0627451, 0, 0.745098 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "$ 99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shadow" type="Sprite" parent="UpgradeTowerButton" index="1"]

show_behind_parent = true
position = Vector2( 28, 28 )
texture = ExtResource( 6 )

[connection signal="toggled" from="." to="." method="_on_TowerBase_toggled"]

[connection signal="pressed" from="BuyTowerAButton" to="." method="_on_BuyTowerAButton_pressed"]

[connection signal="pressed" from="BuyTowerDButton" to="." method="_on_BuyTowerDButton_pressed"]

[connection signal="pressed" from="BuyTowerEButton" to="." method="_on_BuyTowerEButton_pressed"]

[connection signal="pressed" from="SellTowerButton" to="." method="_on_SellTowerButton_pressed"]

[connection signal="pressed" from="UpgradeTowerButton" to="." method="_on_UpgradeTowerButton_pressed"]


